Try to fix scroll issue on mobile #11

--- a/apps/frontend/src/styles/globals.css
+++ b/apps/frontend/src/styles/globals.css
@@ -164,7 +164,7 @@
 
   video {
     background-color: hsl(240, 10%, 3.9%);
-    /* height: 100%; */
+    height: 100%;
   }
 }
 
